infrastructure/cilium/argo-workflows/argo-server.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argo-server
  namespace: argo-workflows
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: server
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
